pve-container (1.0-27) unstable; urgency=medium

  * add support for Fedora 22
  
  * add/restore firewall config with vzdump

  * warn when trying to delete non-existent options

  * create_disks: don't drop extra parameters

  * vzdump: exclude lost+found with unprivilged containers

  * don't restore mountpoint settings

  * vzdump: use --anchored on tar

  * honor backup=yes/no for bind and device mountpoints

  * Redhat: handle /etc/sysconfig/network better

  * Redhat: fix ipv4 dhcp only setup

 -- Proxmox Support Team <support@proxmox.com>  Thu, 26 Nov 2015 09:59:30 +0100

pve-container (1.0-26) unstable; urgency=medium

  * Mounting of zfspool snapshots are not necessary

  * use the unmount-namespace stop hook

  * vzdump: warn about lack of xattr/acl support on nfs

  * Use new lxc.start.unshare setting

  * set memory.kmem.limit_in_bytes

 -- Proxmox Support Team <support@proxmox.com>  Thu, 19 Nov 2015 12:43:02 +0100

pve-container (1.0-25) unstable; urgency=medium

  * support unpriviledged containers

  * improve OS type detection

  * remove --totals from COMMON_TAR_FLAGS

  * vzdump: userns support

 -- Proxmox Support Team <support@proxmox.com>  Sat, 14 Nov 2015 10:29:14 +0100

pve-container (1.0-24) unstable; urgency=medium

  * setup: fix ssh-key perms lost with the rewrite

  * create/restore: add --warning=no-xattr-write to tar

 -- Proxmox Support Team <support@proxmox.com>  Fri, 06 Nov 2015 16:19:47 +0100

pve-container (1.0-23) unstable; urgency=medium

  * improve setup error message

  * create: safer rewrite_ssh_host_keys

 -- Proxmox Support Team <support@proxmox.com>  Fri, 06 Nov 2015 11:44:20 +0100

pve-container (1.0-22) unstable; urgency=medium

  * preserve posix capabilities

 -- Proxmox Support Team <support@proxmox.com>  Fri, 06 Nov 2015 10:56:32 +0100

pve-container (1.0-21) unstable; urgency=medium

  * allow debian stretch/sid containers

  * destroy: check if container is still running
