@@ -1,2 +1,2 @@
 127.0.0.1 localhost.localnet localhost
-1.2.3.2 test3.proxmox.com test3
+1.2.3.2 test3 test3.use-fqdn.com
